# RayTracer

./: CMakeLists.txt  README.md  classes.dot  example2.xml  example4.xml  example5.xml  example6.xml  main.cpp  test.cpp  whitted_rt.cpp  whitted_rt.h
examples/: example1.xml  example2.xml  example3.xml  example4.xml  example5.xml  example6.xml  example7.xml
lib/: parser.cpp  parser.h  tiny_obj_loader.cpp  tiny_obj_loader.h  whitted_rt.cpp  whitted_rt.h
lib/camera/: camera.cpp  camera.h  camera_exception.cpp  camera_exception.h  perspective_camera.cpp  perspective_camera.h  realistic_camera.cpp  realistic_camera.h
lib/geometry/: color.cpp  color.h  direction.cpp  direction.h  geometry_exception.cpp  geometry_exception.h  intersection.h  normal.cpp  normal.h  point.cpp  point.h  position.cpp  position.h  ray.cpp  ray.h  shape.cpp  shape.h  sphere.cpp  sphere.h  transform.cpp  transform.h
lib/geometry/material/: lambertian_material.cpp  lambertian_material.h  material.cpp  material.h  material_exception.cpp  material_exception.h  phong.cpp  phong.h  phong_material.cpp  phong_material.h  solid_material.cpp  solid_material.h  specular_material.cpp  specular_material.h  textured_material.cpp  textured_material.h  transparent_material.cpp  transparent_material.h
lib/geometry/shapes/: mesh.cpp  mesh.h  point.cpp  point.h  shape.cpp  shape.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
lib/light/: ambient_light.cpp  ambient_light.h  cosine_light.cpp  cosine_light.h  hemisphere_light.cpp  hemisphere_light.h  lambertian_light.cpp  lambertian_light.h  light.cpp  light.h  mesh_light.cpp  mesh_light.h  parallel_light.cpp  parallel_light.h  point_light.cpp  point_light.h  sphere_light.cpp  sphere_light.h
lib/math/: helper.cpp  helper.h  mat4.cpp  mat4.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
lib/renderer/: pathtracer.cpp  pathtracer.h  renderer.cpp  renderer.h  vpl.cpp  vpl.h  whitted_rt.cpp  whitted_rt.h
lib/sampler/: random_sampler.cpp  random_sampler.h  sampler.cpp  sampler.h
