cmake_minimum_required(VERSION 3.2)
project(Ray_Tracer)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES main.cpp)
add_executable(Ray_Tracer ${SOURCE_FILES} lib/whitted_rt.cpp lib/whitted_rt.h lib/math/vec3.cpp lib/math/vec3.h lib/math/vec4.cpp lib/math/vec4.h lib/math/vec2.cpp lib/math/vec2.h lib/math/mat4.cpp lib/math/mat4.h lib/camera/camera.cpp lib/camera/camera.h lib/camera/camera_exception.cpp lib/camera/camera_exception.h lib/geometry/ray.cpp lib/geometry/ray.h lib/geometry/sphere.cpp lib/geometry/sphere.h lib/geometry/shape.cpp lib/geometry/shape.h lib/math/helper.cpp lib/math/helper.h lib/geometry/geometry_exception.cpp lib/geometry/geometry_exception.h lib/light/ambient_light.cpp lib/light/ambient_light.h lib/light/parallel_light.cpp lib/light/parallel_light.h lib/geometry/material/material.cpp lib/geometry/material/material.h lib/geometry/material/phong.cpp lib/geometry/material/phong.h lib/geometry/material/material_exception.cpp lib/geometry/material/material_exception.h lib/geometry/material/solid_material.cpp lib/geometry/material/solid_material.h)
add_executable(Test test.cpp lib/math/vec2.cpp lib/math/vec3.cpp lib/math/vec4.cpp lib/math/mat4.cpp lib/camera/camera.cpp lib/camera/camera_exception.cpp lib/geometry/ray.cpp lib/geometry/sphere.cpp lib/geometry/sphere.h lib/geometry/shape.cpp lib/geometry/shape.h lib/math/helper.cpp lib/math/helper.h lib/geometry/geometry_exception.cpp lib/geometry/geometry_exception.h lib/light/ambient_light.cpp lib/light/ambient_light.h lib/light/parallel_light.cpp lib/light/parallel_light.h lib/geometry/material/material.cpp lib/geometry/material/material.h lib/geometry/material/phong.cpp lib/geometry/material/phong.h lib/geometry/material/material_exception.cpp lib/geometry/material/material_exception.h lib/geometry/material/solid_material.cpp lib/geometry/material/solid_material.h)
target_link_libraries(Ray_Tracer png16)